# xiaozhie-esp-blefi

./: .gitignore  README.md  README_en.md
components/blefi/: CMakeLists.txt  Kconfig
components/blefi/include/: blefi.h
components/blefi/src/: blefi.cc
main/: idf_component.yml
main/assets/en-US/: language.json
main/assets/ja-JP/: language.json
main/assets/locales/ar-SA/: language.json
main/assets/locales/cs-CZ/: language.json
main/assets/locales/de-DE/: language.json
main/assets/locales/en-US/: language.json
main/assets/locales/es-ES/: language.json
main/assets/locales/fi-FI/: language.json
main/assets/locales/fr-FR/: language.json
main/assets/locales/hi-IN/: language.json
main/assets/locales/id-ID/: language.json
main/assets/locales/it-IT/: language.json
main/assets/locales/ja-JP/: language.json
main/assets/locales/ko-KR/: language.json
main/assets/zh-CN/: language.json
main/assets/zh-TW/: language.json
main/boards/atoms3r-echo-base/: README.md
main/boards/bread-compact-wifi/: config.json
main/boards/bread-compact-wifi-lcd/: compact_wifi_board_lcd.cc
main/boards/bread-compact-wifi-s3cam/: compact_wifi_board_s3cam.cc
main/boards/common/: wifi_board.cc
main/boards/df-s3-ai-cam/: README.md
main/boards/lilygo-t-cameraplus-s3/: README.md
main/boards/m5stack-core-s3/: README.md
main/boards/minsi-k08-dual/: minsi_k08_dual.cc
main/boards/movecall-cuican-esp32s3/: README.md
main/boards/xingzhi-cube-0.96oled-wifi/: config.json  xingzhi-cube-0.96oled-wifi.cc
main/boards/xmini-c3/: config.json  xmini_c3_board.cc
(+10 files in other folders)
